--- a/srv/pom.xml
+++ b/srv/pom.xml
@@ -37,14 +37,22 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>com.sap.cds</groupId>
 			<artifactId>cds-starter-cloudfoundry</artifactId>
 		</dependency>
+
+        <dependency>
+            <groupId>com.sap.cds</groupId>
+            <artifactId>cds-feature-hana</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.sap.cds</groupId>
             <artifactId>cds-feature-cloudfoundry</artifactId>
         </dependency>
+        
 	</dependencies>
 
 	<build>
